# tscodesearch

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  ast_cpp.py  ast_js.py  ast_py.py  ast_rust.py  ci-test.sh  config.py  conftest.py  cs_ast.py  guidedloop.md  mcp.cmd  mcp.sh  mcp_server.js  mcp_server.py  mcp_server.ts  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  query.py  query_cpp.py  query_cs.py  query_js.py  query_py.py  query_rust.py  requirements-client.txt  requirements.txt  run-server-tests.cmd  run-server-tests.sh  run_tests.cmd  run_tests.mjs  run_tests.sh  search-typesense-util.py  search.py  setup-indexserver.cmd  (+18 more)
.github/codeql/: codeql-config.yml
.github/workflows/: publish.yml  test.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
indexserver/: __init__.py  api.py  backend.py  config.py  csv_log.py  daemon.py  debug_logger.py  heartbeat.py  index_queue.py  indexer.py  query_util.py  runtime_logger.py  search.py  search_modes.py  service.py  smoke_test.py  start_server.py  test_api_startup.py  verifier.py  watcher.py
lib/: daemon_lock.mjs
query/: __init__.py  __main__.py  _util.py  config.py  cpp.py  cs.py  dispatch.py  js.py  py.py  rust.py  sql.py
query/tests/: conftest.py  test_cs_accesses_of_initializers.py  test_cs_at_and_body.py  test_cs_attrs_and_implements.py  test_cs_call_graph.py  test_cs_cast_as_expression.py  test_cs_enclosing_filter.py  test_cs_foreach_accesses.py  test_cs_throttle.py  (+20 more)
scripts/: ci-test.sh  codeql-local.sh  diag.sh  diag_mtime.py  diag_relpath.py  e2e.sh  entrypoint.sh  find_nonascii.py  http_ok.py  parse_perf.py  probe_resolved.py  replace_nonascii.py  run-server-tests.sh  run-tests-with-server.sh  run-wsl-tests.sh  scan_csv.py  search.py  smoke-test.cmd  smoke-test.sh  tscodesearch-wsl.sh  wsl-setup.sh
tests/: base.py  conftest.py  fixtures.py  helpers.py  inspect_doc.py  query_fixture.cpp  query_fixture.js  query_fixture.rs  query_fixture.ts  sql_fixture.sql  test_api_dispatch_tables.py  test_cpp.py  test_cs_accesses_of_initializers.py  test_cs_attrs_and_implements.py  test_cs_cast_as_expression.py  test_cs_foreach_accesses.py  test_cs_null_conditional.py  test_cs_object_initializer_accesses.py  test_cs_out_var_accesses.py  test_cs_pattern_locals.py  test_cs_pattern_match_accesses.py  test_cs_recursive_pattern.py  test_cs_throttle.py  test_cs_uses_kind.py  test_cs_using_statement_locals.py  test_cs_with_expression_accesses.py  test_daemon_lock.mjs  test_docker.py  test_e2e_modes.py  test_fixture.cs  test_http_ok.py  test_indexer.py  test_indexer_query_consistency.py  test_js_ts.py  test_mcp_server.py  test_mode_accesses_of.py  test_mode_accesses_on.py  test_mode_all_refs.py  test_mode_attr.py  test_mode_callers.py  (+26 more)
vscode-codesearch/: .vscodeignore  CLAUDE.md  LICENSE  package-lock.json  package.json  setup-vscode-ext.cmd  test-virtual-scroll.js  tsconfig.json
win-watcher/: package-lock.json  package.json  watcher.mjs
(+98 files in other folders)
