[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tscodesearch"
version = "0.1.0"
description = "Typesense-backed code search with MCP server and tree-sitter indexing"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "tree-sitter",
    "tree-sitter-c-sharp",
    "tree-sitter-python",
    "typesense",
    "watchdog",
    "pathspec",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "vscode-codesearch*", "win-watcher*", "docker*"]
