[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tscodesearch"
version = "0.2.0"
description = "Tantivy-backed code search with MCP server and tree-sitter indexing"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "tree-sitter",
    "tree-sitter-c-sharp",
    "tree-sitter-python",
    "tree-sitter-sql",
    "tantivy",
    "watchdog",
    "pathspec",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests", "query/tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "vscode-codesearch*"]
