[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tscodesearch"
version = "0.2.0"
description = "Tantivy-backed code search with MCP server and tree-sitter indexing"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Microsoft Corporation"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "mcp",
    "tree-sitter",
    "tree-sitter-c-sharp",
    "tree-sitter-python",
    "tree-sitter-rust",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-cpp",
    "tree-sitter-sql",
    "tantivy",
    "watchdog",
    "pathspec",
]

[project.optional-dependencies]
tray = ["pystray", "pillow"]
dev  = ["pytest"]

[project.urls]
Homepage    = "https://github.com/microsoft/tscodesearch"
Issues      = "https://github.com/microsoft/tscodesearch/issues"

[tool.pytest.ini_options]
testpaths = ["tests", "query/tests"]
python_files = ["test_*.py"]

[tool.setuptools]
py-modules = ["mcp_server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["indexserver*", "query*"]
